Fix alignment for scramble view button

--- a/app/static/less/leaderboards/leaderboards.less
+++ b/app/static/less/leaderboards/leaderboards.less
@@ -16,6 +16,7 @@
                 background: transparent;
                 border: 0;
                 color: #999999;
+                align-items: center;
 
                 &.scrambles {
                     margin: 0;
